--- a/languages/admin/en-GB/en-GB.com_miwoshop.old.ini
+++ b/languages/admin/en-GB/en-GB.com_miwoshop.old.ini
@@ -42,7 +42,7 @@ COM_MIWOSHOP_CPANEL_LATEST_VERSION="Latest Version"
 COM_MIWOSHOP_CPANEL_COPYRIGHT="Copyright"
 COM_MIWOSHOP_CPANEL_LICENSE="License"
 COM_MIWOSHOP_CPANEL_STATUS_NOTE_PERSONAL_ID="NOTE: You've not entered the Personal ID. To use MiwoShop, please enter it in the %sMiwoShop Configuration%s page."
-COM_MIWOSHOP_CPANEL_PID="Personel ID"
+COM_MIWOSHOP_CPANEL_PID="Personal ID"
 COM_MIWOSHOP_CPANEL_PID_NOTE="NOTE: You've not entered the Personal ID. Please, enter your %sPersonal ID%s into the %sMiwoShop Settings%s in order to use it."
 
 ; Config
