MiwoShop 1.2.0 version released
git-svn-id: https://plugins.svn.wordpress.org/miwoshop/trunk@1029978 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/admin/en-GB/en-GB.com_miwoshop.ini
+++ b/languages/admin/en-GB/en-GB.com_miwoshop.ini
@@ -3627,3 +3627,4 @@ COM_MIWOSHOP_ERROR_NOT_FOUND_HEADING_TITLE="Page Not Found!"
 COM_MIWOSHOP_ERROR_NOT_FOUND_TEXT_NOT_FOUND="The page you are looking for could not be found! Please contact your administrator if the problem persists."
 COM_MIWOSHOP_ERROR_PERMISSION_HEADING_TITLE="Permission Denied!"
 COM_MIWOSHOP_ERROR_PERMISSION_TEXT_PERMISSION="You do not have permission to access this page, please refer to your system administrator."
+COM_MIWOSHOP_POINTS_EXTENSION_COM_MIWOSHOP="MiwoShop"
